--- a/Public/Bill/SV11/reports.html
+++ b/Public/Bill/SV11/reports.html
@@ -266,10 +266,12 @@
                     <th data-field="BuyerMobile">Mobile</th>
                     <th data-field="Lines">Lines</th>
                     <th data-field="TQty">TQty</th>
-                    <!-- <th data-field="InvoiceNo">InvoiceNo</th> -->
+                    <th data-field="InvoiceDate">InvoiceDate</th>
                     <th data-field="Amount" data-align="right">Amount</th>
                     <th data-field="KS-Delete" data-formatter="window.GlobalDeleteFormatter">Options</th>
-                    <th data-field="KS-TStamp" data-formatter="window.TStamp">Time</th>
+                    <!-- <th data-field="KS-TStamp" data-formatter="window.TStamp">Time</th> -->
+                    <th data-field="Cgst">CGST</th>
+                    <th data-field="Sgst">SGST</th>
                     <th data-field="pk">pk</th>
                 </tr>
             </thead>
